test/classes/initializers/errors/errHandling/throwsBecauseFieldValueThrows.good
throwsBecauseFieldValueThrows.chpl:5: error: cannot call a throwing function before phase 2
